# CP-modeling

./: README.md  pyproject.toml
cpm/: data.py  pretrained.py  train.py  trainers.py
cpm/unet/: basic.py
scripts/: train-unet_basic-epith.py
